--- a/oudcollectioncs.html
+++ b/oudcollectioncs.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oud Collection Case Study</title>
+    <link href='https://fonts.googleapis.com/css?family=Labrada' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    <style>
+            * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        }
+
+        a {
+        text-decoration: none;
+        }
+        
+        body {
+        font-family: lato;
+        color: #fff;
+        background: #000000;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        line-height: 1;
+        } 
+    </style> 
 </head>
 <body>
-    
+    <a href="https://www.behance.net/gallery/225603421/Redesign-of-Oud-Collection-Website">View in Behance</a>
 </body>
 </html>
