--- a/index.html
+++ b/index.html
@@ -254,51 +254,51 @@
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="#">Projects</a></li>
-      <li><a href="#">Bio</a></li>
-      <li><a href="https://drive.google.com/file/d/1zK-V6wiQ66ybcEyTerjuPo0Z_oLqxKnx/view?usp=sharing">CV</a></li>
+      <li><a href="bio.html">Bio</a></li>
+      <li><a href="https://drive.google.com/file/d/1zK-V6wiQ66ybcEyTerjuPo0Z_oLqxKnx/view?usp=sharing"  target="_blank">CV</a></li>
     </ul>
-  </nav>
+    </nav>
 
-  <div class="background-circles">
-  <div class="circle circle1"></div>
-  <div class="circle circle2"></div>
-  <div class="circle circle3"></div>
-  </div>
-
-  <main class="intro">
-    <div class="intro-text">
-      <h1>Rumaysa Fatima</h1>
-      <p>Student at Unimelb</p>
-      <p>Life long learner</p>
-      <p>Generalist</p>
-      <p>Welcome to my portfolio</p>
+    <div class="background-circles">
+    <div class="circle circle1"></div>
+    <div class="circle circle2"></div>
+    <div class="circle circle3"></div>
     </div>
-  </main>
-  <section class="projects">
-  <div class="project-card">
-    <div class="project-text">
-      <h2>Oud Collection</h2>
-      <p class="project-subtitle">University Project</p>
-      <p class="project-description">Redesign of the website Oud Collection</p>
-      <a href="#" class="case-study-link">See Case Study →</a>
-    </div>
-    <div class="project-image">
-      <img src="casestudy1card.png" alt="Oud Collection Preview" />
-    </div>
-  </div>
 
-  <div class="project-placeholder">
-    <p>Case Study 2<br>incoming</p>
-  </div>
-</section>
+    <main class="intro">
+      <div class="intro-text">
+        <h1>Rumaysa Fatima</h1>
+        <p>Student at Unimelb</p>
+        <p>Life long learner</p>
+        <p>Generalist</p>
+        <p>Welcome to my portfolio</p>
+      </div>
+    </main>
+    <section class="projects">
+    <div class="project-card">
+      <div class="project-text">
+        <h2>Oud Collection</h2>
+        <p class="project-subtitle">University Project</p>
+        <p class="project-description">Redesign of the website Oud Collection</p>
+        <a href="oudcollectioncs.html" class="case-study-link">See Case Study →</a>
+      </div>
+      <div class="project-image">
+        <img src="casestudy1card.png" alt="Oud Collection Preview" />
+      </div>
+    </div>
 
-<footer class="contact">
-  <p style="margin-bottom: 20px;">Reach out to me</p>
-  <div class="contact-links">
-    <a href="mailto:rumaysa.fatima09@gmail.com">Email</a>
-    <a href="https://www.linkedin.com/in/rumaysa-fatima/">LinkedIn</a>
-    <a href="https://www.behance.net/rumaysa_fatima">Behance</a>
-  </div>
-</footer>
+    <div class="project-placeholder">
+      <p>Case Study 2<br>incoming</p>
+    </div>
+  </section>
+
+  <footer class="contact">
+    <p style="margin-bottom: 20px;">Reach out to me</p>
+    <div class="contact-links">
+      <a href="mailto:rumaysa.fatima09@gmail.com">Email</a>
+      <a href="https://www.linkedin.com/in/rumaysa-fatima/">LinkedIn</a>
+      <a href="https://www.behance.net/rumaysa_fatima">Behance</a>
+    </div>
+  </footer>
 </body>
 </html>
