minor changes in colour

--- a/oudcollectioncs.html
+++ b/oudcollectioncs.html
@@ -21,7 +21,7 @@
         body {
         font-family: lato;
         font-weight: 200;
-        color: #fff;
+        color: #f5f5f5;
         background: #000000;
         display: flex;
         flex-direction: column;
@@ -39,14 +39,14 @@
         display: flex;
         gap: 10px;
         padding: 10px 20px;
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(176, 176, 176, 0.39);
         border-radius: 100px;
         backdrop-filter: blur(40px);
         }
 
         .nav-links a {
         text-decoration: none;
-        color: #fff;
+        color: #f5f5f5;
         padding: 6px 14px;
         border-radius: 90px;
         font-size: 14px;
@@ -55,7 +55,7 @@
 
         .nav-links a:hover,
         .nav-links a.active {
-        background: rgba(255, 255, 255, 0.15);
+        background: rgba(176, 176, 176, 0.39);
         }
 
            /* Reusable section break */
@@ -63,7 +63,7 @@
         width: 80%;
         margin: 3rem auto;
         height: 2px;
-        background-color: #ffffff;
+        background-color: #f5f5f5;
         opacity: 0.3;
         border-radius: 2px;
         }
@@ -77,7 +77,7 @@
         margin-top: 50px;
         }
         .project-description {
-        font-size: 1em;
+        font-size: 0.9em;
         margin: 10px 0;
         text-align: left;
         }
@@ -135,6 +135,7 @@
     </style> 
 </head>
 <body>
+    <!--
     <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
@@ -150,7 +151,7 @@
     <div class="project-image">
         <img src="case study img1.png" alt="Oud Collection Redesign">
     </div>
-    <!--
+    
     <p class="section">Context</p>
     <h2>Project Overview</h2>
     ...
@@ -162,16 +163,16 @@
     <img src="5122c92eba734979870fe6a7765d9f0e-ezgif.com-crop.gif">
     <section class="list-cards">
         <div class="card">
-            <p class="card-content"><span style="color: #A78989;">Disruptive Navigation — </span> of the first problem identified in the original design.</p>
+            <p class="card-content"><span style="color: #B09B9B;">Disruptive Navigation — </span> Due to the logo and the navigation links below it the navigation bar is too large.</p>
         </div>
         <div class="card">
-            <p class="card-content"><span style="color: #A78989;">Poor Visual Hierarchy — </span>Description of the second problem identified in the original design.</p> 
+            <p class="card-content"><span style="color: #B09B9B;">Poor Visual Hierarchy — </span> it is hard to differenciate important information from unimportant information.</p> 
         </div>
         <div class="card">
-            <p class="card-content"><span style="color: #A78989;">Unintuitive purchase flow — </span>Description of the third problem identified in the original design.</p>
+            <p class="card-content"><span style="color: #B09B9B;">Unintuitive purchase flow — </span> ...</p>
         </div>
         <div class="card">
-            <p class="card-content"><span style="color: #A78989;">Unpolished Design and no visible colour palette — </span>Description of the third problem identified in the original design.</p>
+            <p class="card-content"><span style="color: #B09B9B;">Unpolished Design and no visible colour palette — </span>Description of the third problem identified in the original design.</p>
         </div>
     </section>
     <div class="section-break"></div>
