--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         body {
         font-family: lato;
-        color: #fff;
+        color: #f5f5f5;
         background: #000000;
         display: flex;
         flex-direction: column;
@@ -47,7 +47,7 @@
           position: absolute;
           border-radius: 80%;
           filter: blur(80px);
-          opacity: 0.3;
+          opacity: 0.4;
           animation: move 5s ease-in-out infinite alternate; /* faster motion */
         }
 
@@ -71,7 +71,7 @@
           top: 250px;    /* middle left */
           left: -100px;
           --color1: #5E4545;
-          --color2: #633B48;
+          --color2: #633b48;
           animation-delay: 1s;
         }
 
@@ -82,7 +82,7 @@
           top: 1200px;    /* near footer */
           right: 10px;
           --color1: #373737;
-          --color2: #A78989;
+          --color2: #B09B9B;
           animation-delay: 0s;
         }
 
@@ -117,14 +117,14 @@
         display: flex;
         gap: 10px;
         padding: 10px 20px;
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(176, 176, 176, 0.39);
         border-radius: 100px;
         backdrop-filter: blur(40px);
         }
 
         .nav-links a {
         text-decoration: none;
-        color: #fff;
+        color: #f5f5f5;
         padding: 6px 14px;
         border-radius: 90px;
         font-size: 14px;
@@ -133,7 +133,7 @@
 
         .nav-links a:hover,
         .nav-links a.active {
-        background: rgba(255, 255, 255, 0.15);
+        background: rgba(176, 176, 176, 0.39);
         }
 
         #home {
@@ -150,21 +150,21 @@
         }
 
         .intro-text {
-        border-left: 2px solid #fff;
+        border-left: 2px solid #f5f5f5;
         padding-left: 20px;
         max-width: 500px;
-        height: 140px;
+        height: 130px;
         }
 
         .intro-text h1 {
-        font-size: 32px;
+        font-size: 30px;
         margin-bottom: 10px;
         font-family: labrada;
         font-weight: 300;
         }
 
         .intro-text p {
-        font-size: 18px;
+        font-size: 16px;
         margin-bottom: 4px;
         color: #cccccc;
         font-family: lato;
@@ -180,6 +180,7 @@
         max-width: 1000px;
         margin: 0 auto;
         padding: 150px 20px 150px;
+        z-index: 1; /* ensure projects are above background circles */
         }
 
         .project-card {
@@ -226,9 +227,9 @@
         display: inline-block;
         margin-top: 10px;
         font-size: 14px;
-        color: #fff;
+        color: #f5f5f5;
         text-decoration: none;
-        border: 1px solid #fff;
+        border: 1px solid #f5f5f5;
         padding: 6px 12px;
         border-radius: 4px;
         transition: all 0.3s ease;
@@ -236,7 +237,7 @@
         }
 
         .case-study-link:hover {
-        background-color: #fff;
+        background-color: #f5f5f5;
         color: #000;
         }
 
@@ -254,7 +255,7 @@
         text-align: center;
         font-family: 'Brush Script MT', cursive, sans-serif;
         font-size: 50px;
-        color: #d9aeb2;
+        color: #B09B9B;
         line-height: 1.4;
         height: 300px;
         }
@@ -304,7 +305,7 @@
         .contact {
         text-align: center;
         padding: 60px 20px;
-        color: #fff;
+        color: #f5f5f5;
         font-size: 16px;
         }
 
@@ -318,57 +319,53 @@
         text-decoration: none;
         font-size: 14px;
         transition: color 0.3s ease;
-        color:#A78989;
+        color:#B09B9B;
         }
 
         .contact-links a:hover {
-        color: #fff;
+        color: #f5f5f5;
         }
 
-
-
-
-
-
+        /* Scroll animation */
 
         .wrapper {
-	width: 100%;
-	height: 18vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
+        width: 100%;
+        height: 18vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-.wrapper .box span {
-	width: 20px;
-	height: 20px;
-	display: block;
-	border-right: 4px solid #A78989;
-	border-bottom: 4px solid #A78989;
-	transform: rotate(45deg);
-	animation: animate 3s infinite;
-}
+      .wrapper .box span {
+        width: 15px;
+        height: 15px;
+        display: block;
+        border-right: 4px solid #B09B9B;
+        border-bottom: 4px solid #B09B9B;
+        transform: rotate(45deg);
+        animation: animate 3s infinite;
+      }
 
-.wrapper .box span:nth-child(2) {
-	animation-delay: -0.2s;
-}
+      .wrapper .box span:nth-child(2) {
+        animation-delay: -0.2s;
+      }
 
-.wrapper .box span:nth-child(3) {
-	animation-delay: -0.4s;
-}
+      .wrapper .box span:nth-child(3) {
+        animation-delay: -0.4s;
+      }
 
-@keyframes animate {
-	0% {
-		opacity: 0;
-	}
-	50% {
-		opacity: 1;
-		transform: rotate(45deg) translate(10px, 10px);
-	}
-	100% {
-		opacity: 0;
-	}
-}
+      @keyframes animate {
+        0% {
+          opacity: 0;
+        }
+        50% {
+          opacity: 1;
+          transform: rotate(45deg) translate(10px, 10px);
+        }
+        100% {
+          opacity: 0;
+        }
+      }
     </style>
 </head>
 <body>
